@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0
hide circle
'hide methods

title US004 Request for Listing - Domain Model


class Agent {
-email
-name
-phoneNumber
-address
-store
-ccNumber
-taxNumber
-password
}

class Owner {
-name
-passportNumber
-socialSecurityNumber
-email
-phoneNumber
-password
}

interface Property {
-area
-location
-distanceFromCityCentre
-agent
-photographs
-finalPrice
-announcementDate
-request
}

class Request{
-type
-price
-priceUnit
-isItPublished
-commissionDate
-owner
-commissionValue
-duration
}

class Land{
}

class Apartment {
-numOfBedrooms
-numOfBathrooms
-numOfParkingSpaces
-centralHeating
-airConditioning
}

class House {
-numOfBedrooms
-numOfBathrooms
-numOfParkingSpaces
-centralHeating
-airConditioning
-basement
-inhabitableLoft
-sunExposure
}

Owner "1" - "1" Agent : chooses one from\nlist of all agents >
Owner "1" -- "1..*" Property : owns >
Property "1..*" -- "1" Agent : request is sent to >

Property "1" - "1" Request : has >

Property "1" -- "1" Apartment : can be >
Property "1" -- "1" Land : can be >
Property "1" -- "1" House : can be >

@enduml